using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

// create internal class
internal class AnimationStrings
{
  internal static string isMoving = "IsMoving";
  internal static string isRunning = "IsRunning";
  internal static string isGrounded = "IsGrounded";
  internal static string yVelocity = "yVelocity";
  internal static string jumpTrigger = "jump";
  internal static string isOnWall = "isOnWall";
  internal static string isOnCeiling = "isOnCeiling";
  internal static string attackTrigger = "attack";
  internal static string canMove = "canMove";
  internal static string hasTarget = "hasTarget";
  internal static string isAlive = "isAlive";
  internal static string isHit = "isHit";
  internal static string hitTrigger = "hit";
  internal static string lockVelocity = "lockVelocity";
  internal static string attackCooldown = "attackCooldown";
  internal static string rangeAttackTrigger = "rangedAttack";
}
